--- a/src/index.css
+++ b/src/index.css
@@ -78,17 +78,16 @@ a:focus {
 
 .jumbotron {
   background-color: black;
-  background-image: url("./img/subtle_bg_02.png");
-	background-repeat: repeat;
   border-radius: 0;
-  padding-left: 0;
-  padding-right: 0;
-  padding-bottom: 1.3rem;
+  border-top: 5px solid #3879D6;
+  padding: 2rem 0 1.3rem 0;
+  margin: 0;
 }
 
 .jumbotron h1 {
+  text-transform: uppercase;
   margin: 0 0 .5rem 0;
-  font-size: 2.3rem;
+  font-size: 2.75rem;
   color: white;
 }
 
@@ -98,28 +97,31 @@ a:focus {
   margin: 0;
 }
 
-.jumbo-stripe {
-  background-color: #07A9DB;
-  padding: .25rem 0 .35rem 0;
-}
-
 .jumbotron p {
   margin-top: .5rem;
   font-size: 1.2rem;
   color: white;
 }
 
-.jumbotron a {
-  margin: 0 .5rem 0 .5rem;
-  color: gray;
+.jumbo-social-bar {
+  background-image: url("./img/bg_blue_bar.jpg");
+  background-repeat: no-repeat;
+  background-position: 0 -300px;
+  padding: 0.5rem;
+}
+
+.jumbo-social-bar a {
+  font-size: 1.25em;
+  margin: 0 1rem 0 1rem;
+  color: white;
   transition: color 0.1s linear;
   -o-transition: color 0.1s linear;
   -moz-transition: color 0.1s linear;
   -webkit-transition: color 0.1s linear;
 }
 
-.jumbotron a:hover {
-  color: white;
+.jumbo-social-bar a:hover {
+  color: #2BC9ED;
 }
 
 .footer-copyright {
