--- a/src/index.css
+++ b/src/index.css
@@ -41,14 +41,14 @@ p {
   padding: .4rem 1rem .4rem 1rem;
 }
 
-ul {
+.app-bullets {
   font-size: .9rem;
   color: gray;
   list-style: none; /* get rid of bullets to be replaced with li:before rule */
   padding-left: 1rem;
 }
 
-li:before { /* set bullets to plus signs */
+.app-bullets li:before { /* set bullets to plus signs */
     content: "+";
     margin-right: 4px;
 }
